# nostr-social-graph

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  server.ts  vite.config.ts
.github/workflows/: pages.yml  test.yml
data/: profileData.json  profileIndex.json  socialGraph.json
docker/: graph-relay-strfry.Dockerfile
examples/src/ui/: Avatar.tsx  ProxyImg.tsx  SearchBox.tsx
examples/src/utils/: imgproxy.ts  socialGraph.tsx
rust/: Cargo.toml  README.md
rust/crates/nostr-social-graph/: Cargo.toml
rust/crates/nostr-social-graph-heed/: Cargo.toml
rust/crates/nostr-social-graph-heed/src/: lib.rs
rust/crates/nostr-social-graph-heed/tests/: backend_parity.rs  persistence.rs  server_support.rs
rust/crates/nostr-social-graph-server/: Cargo.toml
rust/crates/nostr-social-graph-server/src/: lib.rs  main.rs  relay_mirror.rs
rust/crates/nostr-social-graph-server/tests/: graph_relay.rs  http.rs  interop.rs  persistence.rs  profile_index.rs
rust/crates/nostr-social-graph/src/: lib.rs
rust/crates/nostr-social-graph/tests/: behavior.rs  interop.rs  server_support.rs
rust/crates/nostr-social-graph/tests/support/: mod.rs
rust/scripts/: graph_relay_write_policy.pl  publish.sh  publish.test.mjs
scripts/: crawler.ts  hashtreeAdapter.ts  profileIndexer.ts  publishProfileSearchIndex.ts  reduceGraphSize.ts
server/: README.md  server.ts
src/: SocialGraph.ts  SocialGraphBinary.ts  SocialGraphSerialization.ts  SocialGraphUtils.ts  UniqueIds.ts  constants.ts  index.ts
tests/: SerializationComparison.test.ts  SocialGraph.test.ts  SocialGraphBinary.test.ts  SocialGraphBinaryFileLoad.test.ts  utils.test.ts
ts/: CHANGELOG.md  Dockerfile  README.md  package.json  vite.config.ts
ts/examples/: vite.config.ts
ts/examples/src/: Main.tsx
ts/examples/src/cards/: Explore.tsx
ts/examples/src/hooks/: useFollows.ts  useProfile.ts
ts/examples/src/ui/: Avatar.tsx  AvatarGroup.tsx  Badge.tsx  ProxyImg.tsx
ts/examples/src/utils/: imgproxy.ts  nostr.ts
ts/scripts/: crawler.ts  hashtreeAdapter.ts  nostr.ts  productionCrawl.ts  profileIndexer.ts  rustInteropFixture.ts
ts/server/: README.md  server.ts
ts/src/: SocialGraph.ts  SocialGraphBinary.ts
ts/tests/: SocialGraph.test.ts
