[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/mmalmi/nostr-social-graph"

[workspace.dependencies]
heed = "0.20"
hex = "0.4"
indexmap = "2.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
