[package]
name = "nostr-social-graph-heed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
heed.workspace = true
nostr-social-graph = { version = "0.1.0", path = "../nostr-social-graph" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
