[package]
name = "nostr-social-graph-server"
version = "0.1.0"
description = "Persistent Rust server for crawling and serving the Nostr social graph"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/mmalmi/nostr-social-graph"
readme = "../../README.md"

[dependencies]
axum.workspace = true
indexmap.workspace = true
nostr-sdk.workspace = true
nostr-social-graph = { version = "0.1.0", path = "../nostr-social-graph" }
nostr-social-graph-heed = { version = "0.1.0", path = "../nostr-social-graph-heed" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower.workspace = true
